gitops/core/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  type: ClusterIP
  ports:
  - port: 8096
    targetPort: 8096
    protocol: TCP
    name: http
  - port: 8920
    targetPort: 8920
    protocol: TCP
    name: https
  - port: 1900
    targetPort: 1900
    protocol: UDP
    name: dlna
  - port: 7359
    targetPort: 7359
    protocol: UDP
    name: discovery
  selector:
    app: jellyfin
